<resources>
    <string name="app_name"></string>
    <string name="pnombre">Manola</string>
    <string name="favoritos">FAVORITOS</string>
    <string name="likes">likes</string>
    <string name="autor">Lorena Gallas</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_acerca_de">Acerca de</string>
    <string name="contacto_titulo">Contacto</string>
    <string name="titulo">Completa todos los campos</string>
    <string name="nombre">Nombre Completo</string>
    <string name="mensaje">Mensaje</string>
    <string name="email">Email</string>
    <string name="texto_boton">Confirmar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>