<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/paddingBottom"
    android:paddingTop="@dimen/paddingTop"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity"
    >

    <include
        android:id="@+id/miActionBar"
        layout="@layout/action_bar"
         />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacto_titulo"
        android:layout_below="@id/miActionBar"
        android:layout_marginLeft="90dp"
        android:textSize="45dp"
        android:textStyle="bold"
        android:textColor="@color/color_letras"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etNombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitulo"
        android:paddingLeft="@dimen/paddingRight"
        android:paddingRight="@dimen/paddingRight"
        android:layout_marginTop="20dp"
        android:hint="@string/nombre" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/paddingRight"
        android:paddingRight="@dimen/paddingRight"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:layout_below="@id/etNombre"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etMensaje"
        android:layout_width="386dp"
        android:layout_height="243dp"
        android:paddingLeft="@dimen/paddingRight"
        android:paddingRight="@dimen/paddingRight"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="20dp"
        android:hint="@string/mensaje"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mensaje"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMensaje"
        android:layout_marginTop="30dp"
        android:text="@string/texto_boton"
        android:theme="@style/MiBotonRaised"
        />

</RelativeLayout>
